--- a/Source/Installer/HeBianGu.Installer.Default/HeBianGu.Installer.Default.csproj
+++ b/Source/Installer/HeBianGu.Installer.Default/HeBianGu.Installer.Default.csproj
@@ -53,7 +53,8 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CustomBootstrapperApplication.cs" />
+    <Compile Include="DefaultBootstrapperApplication.cs" />
+    <Compile Include="InstallerConfig.cs" />
     <Compile Include="Models\BootstrapperApplicationModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
@@ -61,7 +62,6 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\CancelViewModel.cs" />
     <Compile Include="ViewModels\FinishViewModel.cs" />
     <Compile Include="ViewModels\InstallPageViewModel.cs" />
@@ -73,9 +73,6 @@
     </Compile>
     <Compile Include="Views\FinishPage.xaml.cs">
       <DependentUpon>FinishPage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Views\InformationsWindow.xaml.cs">
-      <DependentUpon>InformationsWindow.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\InstallView.xaml.cs">
       <DependentUpon>InstallView.xaml</DependentUpon>
@@ -97,23 +94,11 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Dictionary\StyleResources.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
-    <Page Include="Dictionary\Strings.xaml">
-      <Generator>MSBuild:Compile</Generator>
-      <SubType>Designer</SubType>
-    </Page>
     <Page Include="Views\CancelPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\FinishPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Views\InformationsWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
